{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 62,
  "lineage": "523da74e-790f-5201-acbf-21d022248bbf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "fastapi_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05dfdf0c6c06955c2",
            "arn": "arn:aws:ec2:us-east-1:651706736432:elastic-ip/eipalloc-05dfdf0c6c06955c2",
            "association_id": "eipassoc-027d84329fe917362",
            "domain": "vpc",
            "id": "eipalloc-05dfdf0c6c06955c2",
            "instance": "i-091b24e78d2d356f0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02b02492f293fac34",
            "private_dns": "ip-172-31-3-200.ec2.internal",
            "private_ip": "172.31.3.200",
            "public_dns": "ec2-54-198-105-21.compute-1.amazonaws.com",
            "public_ip": "54.198.105.21",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.fastapi",
            "aws_security_group.fastapi-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fastapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:651706736432:instance/i-091b24e78d2d356f0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091b24e78d2d356f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "FastApi-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02b02492f293fac34",
            "private_dns": "ip-172-31-3-200.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.200",
            "public_dns": "ec2-3-232-134-53.compute-1.amazonaws.com",
            "public_ip": "3.232.134.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0569871c1dd266255",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "fastapi-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8c5ec3e10ef310c",
            "tags": {
              "Name": "FastaApi-Instance",
              "Project": "FastApi"
            },
            "tags_all": {
              "Name": "FastaApi-Instance",
              "Project": "FastApi"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03154428e1859bdd6"
            ]
          },
          "dependencies": [
            "aws_security_group.fastapi-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fastapi-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736432:security-group/sg-03154428e1859bdd6",
            "description": "Fastapi security group",
            "egress": [],
            "id": "sg-03154428e1859bdd6",
            "ingress": [],
            "name": "fastapi-sg",
            "name_prefix": "",
            "owner_id": "651706736432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fastapi-sg"
            },
            "tags_all": {
              "Name": "fastapi-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8cbb85b89ec4e68"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736432:security-group-rule/sgr-02e3b0f5780c79afd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02e3b0f5780c79afd",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03154428e1859bdd6",
            "security_group_rule_id": "sgr-02e3b0f5780c79afd",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.fastapi-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736432:security-group-rule/sgr-0c3a5405e94a76d55",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0c3a5405e94a76d55",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03154428e1859bdd6",
            "security_group_rule_id": "sgr-0c3a5405e94a76d55",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.fastapi-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736432:security-group-rule/sgr-03cb7f78d7e876498",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP access from anywhere",
            "from_port": 80,
            "id": "sgr-03cb7f78d7e876498",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03154428e1859bdd6",
            "security_group_rule_id": "sgr-03cb7f78d7e876498",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.fastapi-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "fastapi_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:651706736432:security-group-rule/sgr-098fe11f6dbe9b35a",
            "cidr_ipv4": "122.161.49.206/32",
            "cidr_ipv6": null,
            "description": "Allow SSH access from my IP",
            "from_port": 22,
            "id": "sgr-098fe11f6dbe9b35a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03154428e1859bdd6",
            "security_group_rule_id": "sgr-098fe11f6dbe9b35a",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.fastapi-sg"
          ]
        }
      ]
    }
  ]
}